@@ -78,6 +78,7 @@
                     --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
                     --add-opens=java.base/java.nio=ALL-UNNAMED
                     --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.jca=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
